@@ -7,6 +7,10 @@ def main(argv):
     if len(argv) > 2:
         f1 = open(argv[1], 'a+')
         f1.write('%s\n' % (argv))
+        if 'MD_STORE' in os.environ:
+            f1.write('MD_STORE=%s\n' % (os.environ['MD_STORE']))
+        if 'PATH' in os.environ:
+            f1.write('PATH=%s\n' % (os.environ['PATH']))
         f1.close()
         sys.stderr.write("done, all fine.\n")
         sys.exit(0)
