@@ -1,3 +1,6 @@
+ * `MDNotifyCmd` and `MDMessageCmd` now get the environment variable `MD_STORE` containing
+    the path to the storage directory.
+
 V2.3.1 (BETA)
 ----------------------------------------------------------------------------------------------------
  * The keyname in key and certificate files is now forced lower case.
